feat: mods management + server runtime installation
- Add mods API (/api/servers/:id/mods): list (incl. disabled), toggle
  enable/disable (.jar <> .jar.disabled), delete, Modrinth search,
  Modrinth version listing, and install from Modrinth CDN
- Add runtime API (/api/servers/:id/runtime): detect current server JAR,
  browse available builds from Paper/Purpur/Fabric/Forge/Vanilla upstream
  APIs, download and install JAR into server directory (admin only)
- Update plugins.tsx: full mods management UI with enabled/disabled badge,
  toggle and delete actions, Modrinth browse/install dialog
- Add runtime.tsx: new page with current JAR detection and tabbed installer
  for all 5 supported runtimes
- Add Runtime nav item to per-server sidebar (Cpu icon)
- Update routeTree.gen.ts with runtime route registration
- Exclude /features from git

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,8 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Runtime data — SQLite database and server file mounts
 data/
+
+# Feature documentation (local reference, not versioned)
+features/
 # Windows ADS metadata
 *:Zone.Identifier
