--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,8 @@
     "build": "bun build src/index.ts --outdir dist --target bun",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "bun run src/db/migrate.ts",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "lint:eslint": "eslint 'src/**/*.ts'"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.2.0",
@@ -23,7 +24,12 @@
     "rcon-client": "^4.2.4"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.30.0"
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "drizzle-kit": "^0.30.0",
+    "eslint": "^10.0.2",
+    "eslint-plugin-sonarjs": "^4.0.0"
   }
 }
